[package]
name = "rip_media"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
faccess = "0.2.4"
glob = "0.3.1"
log = "0.4.20"
rustyline = "13.0.0"
stderrlog = "0.5.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[features]

# Uncomment to sacrifice Drop-on-panic cleanup for 20K space saving
#panic = 'abort'
