[package]
name = "rip_media"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
faccess = "0.2.4"
glob = "0.3.2"
log = "0.4.27"
rustyline = "15.0.0"
stderrlog = "0.6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[features]

# Uncomment to sacrifice Drop-on-panic cleanup for 20K space saving
#panic = 'abort'
