[package]
name = "rip_media"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
faccess = "0.2.4"
glob = "0.3.3"
log = "0.4.29"
rustyline = "17.0.2"
stderrlog = "0.6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[features]

# Uncomment to sacrifice Drop-on-panic cleanup for 20K space saving
#panic = 'abort'
